# gloo-gateway-use-cases

./: .gitignore  README.md
agent-proxy/: openapi.yaml
ai-guardrail-webhook-server/: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  webhook_api.py
ai-guardrail-webhook-server/docs/: export_openapi.py  gloo-ai-gateway-guardrail-webhook-openapi.yaml
ai-guardrail-webhook-server/resources/: common.yaml  prompt-guard-webhook.yaml  routes-basic.yaml  upstream-passthrough.yaml
cloud-migration/: 01-ws-opsteam.yaml  02-svc-httpbin.yaml  03-xs-httpbin.yaml  04-rt-httpbin-ext-only.yaml  04-xs-httpbin.yaml  05-ns-httpbin.yaml  07-rt-httpbin-dark-launch.yaml  07-rt-httpbin-transition.yaml  08-rt-httpbin-int-only.yaml  README.md
cloud-migration-pt2-security/: 01-apikey-secrets.yaml  02-extauth-server.yaml  03-extauth-policy.yaml  04-rt-httpbin-label.yaml  05-waf-log4shell.yaml  06-rate-limit-policy.yaml  README.md  setup-prereq.sh
dynamic-forward-proxy/: README.md
extproc-info-leak/: 01-vho-resp-hdr-rm.yaml  02-http-listener-options.yaml  03-vho-cp-resp-hdr.yaml  README.md
get-started/: README.md  install-ee-cli.sh  install-ee-helm.sh  install-oss-cli.sh  install-oss-helm.sh  uninstall.sh
large-payload-gateway-api/: 03-httpbin-route.yaml  04-route-option-header.yaml  05-httpbin-route-ext.yaml  06-route-option-passthrough.yaml  100b-payload.txt
large-payloads/: 100b-payload.txt  README.md  curl-format.txt  route-table.yaml  transformation-policy-with-passthrough.yaml  transformation-policy.yaml  workspace.yaml
log4shell/: README.md  waf-policy.yaml  (+1 more)
(+208 files in other folders)
